# iris-classifier

./: pyproject.toml  requirements.txt
notebooks/: iris.ipynb
reports/: iris.html
src/iris_classifier/models/: light_gbm.py
test/: test_dummy.py
