[tool.poetry]
name = "yolt-iris-classifier"
version = "0.1.0"
description = ""
authors = ["Kenan Ozturk <ykozturk@gmail.com>"]

packages = [
    {include = "iris_classifier", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
lightgbm = "^3.3.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
